# DBMS-cpp

./: .gitignore  CMakeLists.txt  README.md  ctx.sh  main.cpp  prompt
.run/: DatabaseProject.run.xml  ctx.run.xml
engine/: Dbms.cpp  Dbms.hpp  dbms.cpp  dbms.h  dbms.hpp  make_save  parser.cpp  parser.h  query.h  table.h
engine/Dbms/: Dbms.cpp  Dbms.hpp
engine/Dbms/complementary/: are_consistent.cpp  execute_query.cpp  load_save.cpp  make_save.cpp
engine/backup/: recent_change.hpp
engine/executor/: Executor.cpp  Executor.hpp  execution_error.h  execution_result.h  execution_result.hpp  executor.cpp  executor.h  executor.hpp
engine/executor/actions/create/: create_table.cpp
engine/executor/actions/delete/: delete_f.cpp
engine/executor/actions/insert/: insert.cpp
engine/executor/actions/select/: select.cpp
engine/executor/actions/update/: update.cpp
engine/executor/structs/: Execution_error.hpp  Execution_result.hpp  execution_error.hpp  execution_result.hpp
engine/optimizer/: optimizer.cpp  optimizer.h
engine/parser/: Parser.cpp  Parser.hpp  parse_error.h  parse_error.hpp  parser.cpp  parser.h  parser.hpp  parser_complementary.hpp  parser_steps.hpp  parser_switch.hpp
engine/parser/complementary/: complementary.cpp
engine/parser/steps/: step_create_table.cpp  step_delete_from.cpp  step_drop_table.cpp  step_error.cpp  step_foreign_key.cpp  step_group_by.cpp  step_having.cpp  step_insert.cpp  step_join.cpp  step_primary_key.cpp  step_select.cpp  step_type.cpp  step_update.cpp  step_where.cpp  steps.cpp
engine/parser/structs/: Parse_error.hpp
engine/parser/switch/: switch.cpp
engine/query/: Query.cpp  Query.hpp  condition.h  condition.hpp  get_operator.h  get_operator.hpp  query.cpp  query.h  query.hpp  query_operator.h  query_operator.hpp
engine/query/complementary/: get_operator.hpp
engine/query/structs/: Condition.hpp  Field.hpp  Insert.hpp  Key_attr.hpp  Query_operator.hpp  Ref.hpp  Update.hpp  condition.hpp  field.hpp  key_attr.hpp  query_operator.hpp  ref.hpp  reference.hpp
engine/saves/: table_query_example
engine/saves/tables/2024_05_29 22_12_50_827205200/: test.txt  test2.txt
engine/saves/tables/2024_05_30 17_24_39_379063700/: test.txt
engine/saves/tables/2024_05_30 17_28_20_489949300/: test.txt
engine/table/: Table.cpp  Table.hpp  column.h  column.hpp  data_type.h  data_type.hpp  row.h  row.hpp  table.cpp  table.h  table.hpp
engine/table/column/: column.cpp  column.hpp
engine/table/row/: row.cpp  row.hpp
engine/table/structs/: Data_type.hpp
engine/table/structs/column/: Column.cpp  Column.hpp  column.cpp  column.hpp
engine/table/structs/foreign_key/: Foreign_key.cpp  Foreign_key.hpp  foreign_key.cpp  foreign_key.hpp
engine/table/structs/key/: Key.cpp  Key.hpp  key.cpp  key.hpp
engine/table/structs/primary_key/: Primary_key.cpp  Primary_key.hpp  primary_key.cpp  primary_key.hpp
engine/table/structs/row/: Row.cpp  Row.hpp  row.hpp
engine/ui/: codeeditor.cpp  codeeditor.hpp  helpwidget.cpp  helpwidget.hpp  infowidget.cpp  infowidget.hpp  querytab.cpp  querytab.hpp  sqlhighlighter.cpp  sqlhighlighter.hpp  sqltablemodel.cpp  sqltablemodel.hpp  ui.cpp  ui.hpp
engine/utils/: backup.h  print_table.hpp  print_util.hpp
engine/utils/ut_contains_elems/: ut_contains_elems.hpp
engine/utils/ut_find_in_vector/: ut_find_in_vector.hpp
engine/utils/ut_is_identifier/: ut_is_identifier.cpp  ut_is_identifier.hpp
engine/utils/ut_print/: ut_print.cpp  ut_print.hpp
engine/utils/ut_return_join_type/: ut_return_join_type.cpp  ut_return_join_type.hpp
engine/utils/ut_str_toupper/: ut_str_toupper.cpp  ut_str_toupper.hpp
resources/: resources.qrc
tests/: dbms_group_by_test.cpp  dbms_having_test.cpp  dbms_integration_test.cpp  dbms_update_test.cpp  parser_query_types_test.cpp  test_parser.cpp
